<resources>
    <string name="app_name">WFM</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="wfm_controller">WFM CONTROLLER</string>
    <string name="motor">MOTOR</string>
    <string name="title_activity_add_tank">add_tank</string>
    <string name="m2">M2</string>
    <string name="todo">TODO</string>
    <string name="v">V:</string>
    <string name="todo2">TODO</string>
    <string name="distance">Distance:</string>
    <string name="m1">M1</string>
    <string name="default_notification_channel_id">fffff\n</string>
</resources>